feat(ec2): optimize instance configurations
- Enable EBS optimization by default with GP3 volumes
- Add IOPS (3000) and throughput (125) settings for GP3 volumes
- Standardize instance configurations across all types (dedicated, spot, capacity)
- Add validation for EBS-optimized compatible instance types
- Add security level and backup policy variables with validation
- Implement consistent lifecycle policies and resource timeouts
- Add integration tests for EBS optimization verification
- Fix metadata options for enhanced security (IMDSv2)
- Standardize tag structure across all resources

--- a/.gitignore
+++ b/.gitignore
@@ -98,6 +98,7 @@ packer_cache/
 !/.golangci.yml
 !/.env.example
 !*.tfvars.example
+!*.aiderignore
 
 # Go
 go.mod
@@ -105,3 +106,5 @@ go.sum
 
 # Custom ignores
 # Add any additional files or directories you wish to ignore below
+.aider.*
+.env
